# Push-Pull-WidgetRattus

./: CHANGELOG.md  LICENSE  Push-Pull-WidgetRattus.cabal  cabal.project  hie.yaml  stack.yaml
app/: Behaviour.hs  Event.hs  Main.hs  Primitives.hs  Primitives2.hs  Widgets.hs
app/Examples/: Calculator.hs  Counter.hs  CounterAndTimer.hs  DerivativeTests.hs  FlightBooker.hs  IntegralTests.hs  RewriteTests.hs  Stopwatch.hs  TemperatureConverter.hs  Test.hs  Timer copy.hs  Timer.hs
app/examples/: Test.hs
