cabal-version: 3.0
name: Push-Pull-WidgetRattus
version: 0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
license: Apache-2.0
license-file: LICENSE
author: Philip Flyvholm & Lasse Faurby
maintainer: phif@itu.dk
-- A copyright notice.
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common shared-settings
  other-modules:
    Behaviour
    Event
    Primitives
    Widgets

  build-depends:
    WidgetRattus ^>=0.4,
    base ^>=4.17.2.1,
    containers,
    monomer >=1.4 && <2,
    random,
    text,
    time,

  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -W

executable flight
  import: shared-settings
  main-is: Examples/FlightBooker.hs

executable timer
  import: shared-settings
  main-is: Examples/Timer.hs

executable counter
  import: shared-settings
  main-is: Examples/Counter.hs

executable stopwatch
  import: shared-settings
  main-is: Examples/stopwatch.hs

executable converter
  import: shared-settings
  main-is: Examples/TemperatureConverter.hs
